--- a/paper/sections/challenges.tex
+++ b/paper/sections/challenges.tex
@@ -141,9 +141,8 @@ Such attacks aim to lower the number of participating miners or to fracture the 
 \subsection{Privacy and anonymity}
 %Another major challenge is how to protect the privacy of the users and data stored on a Blockchain ledger.
 Data in a Blockchain ledger is public (at least to all miners) in order to enable verification, meaning that sensitive data is inherently non-private.
-Confidentiality can be provided by hosting a Blockchain system where only trusted entities can access it or by applying advanced cryptographic techniques that allow miners to verify the correctness of encrypted transactions (e.g., zero-knowledge proofs, secure multi-party computation, and functional encryption)~\cite{SP:KMSWP16}.
-Still, encrypting data in the blockchain limits auditability and the ability to have 
-meaningful shared governance.
+Confidentiality can be provided using a reference monitor that limits access (for non-miners) to data stored in the blockchain based on access control lists stored in the blockchain, but this introduces a trusted entity (the reference monitor).
+Alternatively, the data can be encrypted using advanced cryptographic techniques that allow miners to verify the correctness of encrypted transactions (e.g., zero-knowledge proofs, secure multi-party computation, and functional encryption)~\cite{SP:KMSWP16}, though encrypting data limits auditability and the ability to have meaningful shared governance.
 
 Extreme care must be taken when trying to build an anonymous blockchain system.
 While many existing Blockchain systems provide a notion of ``pseudonymity'' in which users are identified by their cryptographic keys instead of by their real-world names, this does not provide true anonymity as attacks that correlate transactions by the same pseudonyms together with other data external to the Blockchain system can effectively deanonymize users~\cite{DBLP:journals/corr/abs-1708-04748}.
