Commiting the current word version of the paper.

--- a/paper/sections/introduction.tex
+++ b/paper/sections/introduction.tex
@@ -2,7 +2,7 @@
 
 \section{Introduction}
 
-In 2008, an author using the pseudonym Satoshi Nakamoto wrote a white paper describing Bitcoin, a new decentralized cryptocurrency~\cite{Nak08}. Unlike past attempts at forming a cryptocurrency--- attempts which relied on pre-established trusted entities for the system to operate correctly --- Bitcoin's design runs on the open internet with no one in charge, while maintaining uptight security. While the building blocks of Bitcoin were not novel, the composition of these properties into a single system was a meaningful contribution~\cite{Narayanan17} and Bitcoin became the first cryptocurrency to achieve widespread attention.
+In 2008, an author using the pseudonym Satoshi Nakamoto wrote a white paper describing Bitcoin, a new decentralized cryptocurrency~\cite{Nak08}. Unlike past attempts at forming a cryptocurrency---attempts which relied on pre-established trusted entities for the system to operate correctly---Bitcoin's design runs on the open internet with no one in charge, while maintaining uptight security. While the building blocks of Bitcoin were not novel, the composition of these properties into a single system was a meaningful contribution~\cite{Narayanan17} and Bitcoin became the first cryptocurrency to achieve widespread attention.
 
 In response to Bitcoin's success, the technology was quickly dissected to understand how it works and what is new. Its most innovative component has been labeled ``the blockchain,'' a decentralized approach for participants to agree upon and lock in data and computation.
 
