For arXiv submission

--- a/paper/main.tex
+++ b/paper/main.tex
@@ -7,8 +7,8 @@
 \input{setup/packages}
 \input{setup/macros}
 
-%\usepackage{draftwatermark}
-%\SetWatermarkColor[gray]{0.9}
+\usepackage{draftwatermark}
+\SetWatermarkColor[gray]{0.9}
 
 %====================================================================
 
@@ -78,7 +78,7 @@
 
 \maketitle
 
-\blfootnote{\IEEEauthorrefmark{1}Prior affiliation where a large portion of this research was completed.}
+\blfootnote{\IEEEauthorrefmark{1}The majority of this work was completed while these authors worked at MIT Lincoln Laboratory.}
 
 %====================================================================
 
