Preparing the paper in CSUR format.

--- a/paper/sections/introduction.tex
+++ b/paper/sections/introduction.tex
@@ -28,7 +28,7 @@ In this paper, we attempt to address this ambiguity and provide a holistic overv
 	\centering
 	
 	\begin{tabular}{l|l}
-		\textbf{Academia} & \textbf{Industry} \\
+		\textbf{Academia} & \textbf{Industry} \\ \hline
 
 		Increased interest recently & Long-term interest \\
 		Focused on specific subsystems & Takes a holistic view \\
