--- a/paper/sections/results.tex
+++ b/paper/sections/results.tex
@@ -11,7 +11,16 @@
 	\label{fig:technical-properties}
 \end{figure*}
 
-Our literature analysis finds three key groupings of properties related to Blockchain technology (see Figure~\ref{fig:technical-properties}).\footnote{A version of this chart that shows the technical primitives that support the technical properties is given in the Appendix (see Figure~\ref{fig:technical-properties-full}).}
+\begin{figure}
+	\centering
+	\includegraphics[page=1,scale=.75]{figures/grounded-theory-main}
+	
+	{\small Blue---technical properties, green---technical primitives}
+	\caption{Technical Properties and Primitives for Blockchain Technology}
+	\label{fig:technical-properties-full}
+\end{figure}
+
+Our literature analysis finds three key groupings of technical properties related to Blockchain technology (see Figure~\ref{fig:technical-properties}; Figure~\ref{fig:technical-properties-full} shows how these properties are related to various technical primitives).
 Most importantly, consensus is used to provide \textit{shared governance and operation}.
 In support of shared governance and operation, other technical properties provide \textit{verifiable state} and {resilience to data loss}.
 By themselves, these property groups are nothing new, but used together they define \emph{Blockchain technology}, or \emph{Blockchain} for short.
