--- a/paper/setup/packages.tex
+++ b/paper/setup/packages.tex
@@ -58,7 +58,7 @@
 \usepackage{caption}
 \usepackage[usenames, dvipsnames]{color}
 \usepackage[hyphens]{url}
-\usepackage[pdftitle=Title,pdfauthor=Anonymous]{hyperref}
+\usepackage{hyperref}
 
 \let\labelindent\relax
 \usepackage{enumitem}
